@@ -31,6 +31,7 @@ git-annex (7.20190826) UNRELEASED; urgency=medium
   * init: Catch more exceptions when testing locking.
   * init: Fix a reversion that broke initialization on systems that
     need to use pid locking.
+  * Removed support for git versions older than 2.1.
 
  -- Joey Hess <id@joeyh.name>  Sat, 24 Aug 2019 12:54:35 -0400
 
